# opengeni

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  docker-compose.yml  package.json  tsconfig.base.json
.agent/: progress.md
.agents/skills/opengeni/: SKILL.md
.agents/skills/opengeni-client/: SKILL.md
.changeset/: calm-operators-revive.md  capture-blocked-reason.md  chat-markdown-default.md  closure-range-cascade.md  codex-context-window-honest.md  codex-session-affinity-header.md  codex-sharded-rotation-strategy.md  codex-tool-search-description-freeze.md  compact-event-reads.md  config.json  contracts-export-sync.md  credit-exhaustion-surfacing.md  document-delete-sdk.md  env-example-boots.md  exec-deadline-hint-reaches-model.md  f4c-modal-observability-followup.md  fair-codex-capacity.md  first-paint-single-fetch.md  first-party-mcp-dynamic-auth.md  git-cli-provider-auth.md  golden-event-grammar.md  initial-public-release.md  live-turn-cluster-fold.md  machine-immediate-offline.md  machine-link-events.md  machines-subpath-working-dir.md  modal-private-registry-image.md  never-fold-running-cluster.md  op-stream-server-client.md  op-stream-wire-serving.md  ope-26-session-pinning.md  optional-mcp-auth-isolation.md  optional-mcp-invocation-isolation.md  prompt-cache-hit-instrumentation.md  publish-full-opengeni-closure.md  queued-message-anchoring.md  quiet-status-ticks.md  registry-bare-model-routing.md  repair-upload-finalization.md  resilient-connected-machine-ops.md  (+16 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: agent-ci.yml  agent-release.yml  ci.yml  desktop-e2e.yml  preview.yml  release.yml
agent/: .dockerignore  Cargo.toml  README.md
agent/crates/opengeni-agent/: Cargo.toml
agent/crates/opengeni-agent-engine/: Cargo.toml
agent/crates/opengeni-agent-engine/src/: admission.rs  flow.rs  lib.rs  registry.rs  retention.rs
agent/crates/opengeni-agent-harness/: .gitignore  Cargo.toml  README.md
agent/crates/opengeni-agent-harness/src/: agent.rs  driver.rs  main.rs  nats.rs  op_scenarios.rs  opstream.rs  proc.rs  report.rs  scenario.rs
agent/crates/opengeni-agent-macos-ffi/: Cargo.toml
agent/crates/opengeni-agent-macos-ffi/src/: ffi.rs  lib.rs
agent/crates/opengeni-agent-platform/: Cargo.toml
agent/crates/opengeni-agent-platform/src/: cgroup.rs  desktop.rs  lib.rs  macos.rs  native.rs  service.rs  virtual_desktop.rs
agent/crates/opengeni-agent-platform/tests/: cgroup_placement.rs
agent/crates/opengeni-agent/src/: backoff.rs  capacity.rs  config.rs  dispatch.rs  engine.rs  enrollment.rs  instance_lock.rs  job.rs  legacy.rs  main.rs  metrics.rs  ops.rs  overrides.rs  supervisor.rs
agent/install/: install.ps1  install.sh  opengeni-agent-minisign.pub  uninstall.sh
agent/install/baked/: .gitignore  .gitkeep
agent/proto/: opengeni_agent.proto
apps/api/: CHANGELOG.md  package.json  tsup.config.ts
apps/web/: .env.example  .gitignore  index.html  package.json  tsconfig.json  vite.config.ts
apps/worker/: CHANGELOG.md  LICENSE  package.json  tsup.config.ts
data/catalog/: integrations-snapshot.json
deploy/stacks/: official-nats.values.yaml  official-temporal-namespace-job.yaml  official-temporal-postgres.values.example.yaml  opengeni-platform-networkpolicies.yaml
docker/: desktop.Dockerfile  ogtool  opengeni-git-askpass  opengeni.Dockerfile  sandbox.Dockerfile
docker/desktop/: opengeni-browser.app.desktop  opengeni-browser.helper.desktop  opengeni-browser.sh  opengeni-desktop-down.sh  opengeni-desktop-up.sh  opengeni-record.sh  opengeni-terminal-down.sh  opengeni-terminal-up.sh
docs/: README.md  architecture.md  aws-resource-ledger.md  azure-resource-ledger.md  capabilities.md  codex-subscription-rotation.md  command-palette.md  connected-machines.md  context-compaction.md  credentials.md  deployment.md  embedding-workbench.md  embedding.md  environments.md  gcp-resource-ledger.md  goals.md  infra-completion-audit.md  infra-deployment-goal.md  integrations-design.md  manager-session-robustness.md  mcp-surfaces.md  model-providers.md  operator-session-revival.md  packs.md  reliability-fixes.md  rigs.md  run-lifecycle.md  session-mcp-servers.md  toolchain.md  variable-sets.md
docs/design/: README.md  lazy-provisioning.md  observability.md  prompt-cache-affinity.md  subscription-capacity-and-caching.md  toolspace.md
scripts/: bake-agent.sh  build-publishable-packages.ts  check-docs-refs.ts  check-variable-set-rename.ts  check-workspace-billing-static.ts  deployment-conformance.ts  deployment-ledger-check.ts  deployment-preflight.ts  deployment-runtime-artifacts.ts  deployment-stack.ts  deployment-temporal-values.ts  dev-stack.sh  gen-screenshot-error-card.mjs  gen-screenshot-omitted-card.mjs  import-integrations-catalog.test.ts  import-integrations-catalog.ts  integrations-catalog-probe.ts  prepublish-guard  publish-closure-guard.ts  publishable-workspaces.ts  recompute-codex-cache-baseline.mjs  refresh-integrations-catalog.ts  release-publish.sh  rewrite-entry-points.ts  rewrite-workspace-deps.ts  rig-ui-shots.ts  rig-ui-stack.ts  run-browser-e2e.ts  typecheck.ts
scripts/fixtures/: integrations-catalog-sample.json
scripts/operator/: revive-session.test.ts  revive-session.ts  tsconfig.json
spikes/codex-subscription/: live-check.ts  live-token-check.ts
test/: source-hygiene.test.ts
test/e2e/: browser.e2e.ts  channel-a.e2e.ts  opstream-runner.e2e.ts  rig-setup.e2e.ts  rig-verification.e2e.ts  sandbox.e2e.ts  session-pins.browser.e2e.ts
test/integration/: api.integration.ts  db.integration.ts  file-upload.integration.ts  nats.integration.ts  selfhosted-control-transport.integration.ts  temporal-workflow.integration.ts  worker-activity.integration.ts  worker-restart.integration.ts  workspace-capture.integration.ts  workspace-isolation.integration.ts
test/live/: fireworks-glm.live.ts  p43-agent-drives-desktop.live.ts  providers.live.ts  sandbox-ownership.live.ts
(+389 files in other folders)
